Added Todo UI and Some Navigation Staff

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,12 +1,48 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+
+<div class="container">
+
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" [routerLinkActive]="'text-primary'"  [routerLink]="'/home'">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLinkActive]="'text-primary'"  [routerLink]="'/counter'">Counter</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLinkActive]="'text-primary'"  [routerLink]="'/tick'">Tik</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLinkActive]="'text-primary'"  [routerLink]="'/todos'">To Do</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" routerLink="/bal">Counter</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+      
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
 </div>
-<h2>todos from node server (if data is not listed here make sure you started your node server [npm start]) </h2>
-<div>[
-  <div *ngFor="let todo of todos">
-    <pre> <i>{{ todo | json }} </i></pre>
-  </div>]
-</div>
+
+<router-outlet></router-outlet>
