--- a/frontend/src/app/todos/todos.component.css
+++ b/frontend/src/app/todos/todos.component.css
@@ -1,37 +1,18 @@
-.box1 {
-    border: solid 1px #006699;
-    padding: 20px;
-    background: #f3f3f3;
-    border-radius: 5px;
-  }
-
-  .todos input.textfield {
-    width: 480px;
-    height: 36px;
-    margin-right: 20px;
-    font-size: 1.4em;
-    vertical-align: top;
-  }
-
-  .todos input.checkbox {
-    width: 20px;
-    height: 20px;
-  }
-
-  .todos .checked {
-    text-decoration: line-through;
-  }
-
-  .todos button {
-    height: 36px;
-    font-size: 1.1em;
-    vertical-align: top;
-    border: solid 1px #999;
-    border-radius: 2px;
-  }
-
-  .todos .delete-icon {
-    diplay: inline-block;
-    cursor: pointer;
-  }
-  
+#input-container {
+  width: 50%;
+  margin: 20px auto;
+}
+.cross {
+  border-radius: 100%;
+  padding: 5px;
+  margin: 10px;
+  cursor: pointer;
+  line-height: 0px;
+}
+.cross:hover {
+  color: brown;
+}
+.checked {
+  color: grey;
+  text-decoration: line-through;
+}
